--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PnP Formatter</title>
+        <title>P&P Formatter</title>
+        <link rel="icon" href="../data/pnp.png">
         <style>
             body {
                 margin: 50px;
