--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,13 @@
                 margin-top: 60px;
                 cursor: pointer;
             }
+            .submitbtn {
+                font-size: 20px;
+                margin-top: 60px;
+                cursor: pointer;
+                width: 200px;
+                height: 70px;
+            }
         </style>
     </head>
     <body>
@@ -33,7 +40,11 @@
             <p id="infotxt">Pick and Place File Formatter</p>
             <form action="upload_excel" method="POST" enctype="multipart/form-data">
                 <label for="excelInp" id="inpLabel">Upload the Excel file(s):</label>
-                <input type="file" name="excelInp" id="excelInp" onchange="this.form.submit()" multiple>
+                <input type="file" name="excelInp" id="excelInp" onchange="this.form.submit()" multiple> <br>
+                <button class="submitbtn" type="submit" name="single10">Download as Single for Neoden 10</button>
+                <button class="submitbtn" type="submit" name="panel10">Download as Panel for Neoden 10</button>
+                <button class="submitbtn" style="margin-left: 50px;" type="submit" name="single4">Download as Single for Neoden 4</button>
+                <button class="submitbtn" type="submit" name="panel4">Download as Panel for Neoden 4</button>
             </form>
         </div>
     </body>
