--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,10 @@
             <form action="upload_excel" method="POST" enctype="multipart/form-data">
                 <label for="excelInp" id="inpLabel">Upload the Excel file(s):</label>
                 <input type="file" name="excelInp" id="excelInp" required multiple> <br>
-                <button class="submitbtn" type="submit" name="single10">Download as Single for Neoden 10</button>
-                <button class="submitbtn" type="submit" name="panel10">Download as Panel for Neoden 10</button>
-                <button class="submitbtn" style="margin-left: 50px;" type="submit" name="single4">Download as Single for Neoden 4</button>
-                <button class="submitbtn" type="submit" name="panel4">Download as Panel for Neoden 4</button>
+                <button class="submitbtn" type="submit" name="filetype" value="single10">Download as Single for Neoden 10</button>
+                <button class="submitbtn" type="submit" name="filetype" value="panel10">Download as Panel for Neoden 10</button>
+                <button class="submitbtn" type="submit" name="filetype" value="single4" style="margin-left: 50px;">Download as Single for Neoden 4</button>
+                <button class="submitbtn" type="submit" name="filetype" value="panel4">Download as Panel for Neoden 4</button>
             </form>
         </div>
     </body>
