--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             <p id="infotxt">Pick and Place File Formatter</p>
             <form action="upload_excel" method="POST" enctype="multipart/form-data">
                 <label for="excelInp" id="inpLabel">Upload the Excel file(s):</label>
-                <input type="file" name="excelInp" id="excelInp" required multiple> <br>
+                <input type="file" name="excelInp" id="excelInp" required> <br>
                 <button class="submitbtn" type="submit" name="filetype" value="single10">Download as Single for Neoden 10</button>
                 <button class="submitbtn" type="submit" name="filetype" value="panel10">Download as Panel for Neoden 10</button>
                 <button class="submitbtn" type="submit" name="filetype" value="single4" style="margin-left: 50px;">Download as Single for Neoden 4</button>
