--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>P&P Formatter</title>
-        <link rel="icon" href="../data/pnp.png">
+        <link rel="icon" href="C:\Python\PnP_FileConverter\data\pnp.png">
         <style>
             body {
                 margin: 50px;
